# EinkPDA

.github/workflows/: build.yml
desktop_emulator/: CMakeLists.txt  build.sh
desktop_emulator/src/: desktop_display_sdl2_linux.cpp
